fix covers_css_html_js

--- a/src/css/06-covers.css
+++ b/src/css/06-covers.css
@@ -1,13 +1,12 @@
 /* 06-covers */
-.covers {
+#covers {
   position: relative;
   overflow: hidden;
   height: 508px;
   min-width: 320px;
-  background-color: var(--Background);
   background-image: image-set(
-    url(/images/covers/background-mob.jpg),
-    url(/images/covers/background-mob@2x.jpg)
+    url(/images/covers/background-mob.jpg) 1x,
+    url(/images/covers/background-mob@2x.jpg) 2x
   );
   background-size: cover;
 }
@@ -45,7 +44,8 @@
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
-.marquee-foto {
+.marquee-photo {
+  width: 100%;
   height: 100%;
 }
 
@@ -62,11 +62,11 @@
 }
 /* Tablet */
 @media only screen and (min-width: 768px) {
-  .covers {
+  #covers {
     height: 960px;
     background-image: image-set(
-      url(/images/covers/background-tab.jpg),
-      url(/images/covers/background-tab@2x.jpg)
+      url(/images/covers/background-tab.jpg) 1x,
+      url(/images/covers/background-tab@2x.jpg) 2x
     );
   }
   .marquee {
@@ -84,10 +84,10 @@
 
 /* Desktop */
 @media only screen and (min-width: 1440px) {
-  .covers {
+  #covers {
     background-image: image-set(
-      url(/images/covers/background-desk.jpg),
-      url(/images/covers/background-desk@2x.jpg)
+      url(/images/covers/background-desk.jpg) 1x,
+      url(/images/covers/background-desk@2x.jpg) 2x
     );
   }
   .marquee {
